creating the table

--- a/html/tracker.html
+++ b/html/tracker.html
@@ -22,6 +22,21 @@
                 <label>Amount:</label>
                 <input type="text" name="amount" class="input-field" id="amount-input" placeholder="Enter the amount...">
             </div>
+            <div class="button-class">
+                <button type="submit" class="btn" id="expense-btn">Add Expense</button>
+            </div>
+        </div>
+        <div class="table-here">
+            <table class="main-table">
+                <tbody class="inherit">
+                    <tr>
+                        <th>Type</th>
+                        <th>Name</th>
+                        <th>Date</th>
+                        <th>Amount</th>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
     
